--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -20,6 +20,10 @@
         var name = $("#name").text();
         $.post("/schedule", {summary: name, datetime: date} )
         .done(function(){
+          if(todos.length <= 0) {
+            $('body').text("Amazing! Done!");
+            return;
+          }
           $("#name").text(todos.shift());
           $("#left").text(dgen());
           $("#right").text(dgen());
