--- a/views/todoform.ejs
+++ b/views/todoform.ejs
@@ -1,18 +1,34 @@
 <html>
   <head>
     <title>Add your tasks</title>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   </head>
   <body>
 
-    <form method=post>
-      <input type="text" name="todo"/>
-      <input type="submit"/>
+    <form method=post id="todoForm">
+      <input type="text" name="todo" id="todoBox"/>
+      <input type="submit" id="subButton"/>
     </form>
-    <% if(user.todos) { %>
-    <% user.todos.forEach(function(todo){ %>
-      <%= todo %>
+    <div id="todos">
+      <% if(user.todos) { %>
+      <% user.todos.forEach(function(todo){ %>
+        <%= todo %> <br />
 
-    <% }) %>
-    <% } %>
+      <% }) %>
+      <% } %>
+    </div>
   </body>
+
+  <script type="text/javascript">
+    $(function(){
+      $("#subButton").click(function(e){
+        e.preventDefault();
+        var summary = $("#todoForm #todoBox").val();
+        $.post("/todos", {todo: summary}).done(function(data){
+            $("#todos").html($(data).filter("#todos").html());
+        })
+
+      })
+    })
+  </script>
 </html>
