added nav to views

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -5,6 +5,7 @@
     Schedule your tasks
   </title>
   <body>
+    <a href="/todos">Back</a>
     <% if(todos.length > 0) { %>
     <div id="name"><%= todos.shift()%> </div>
     <div class="option" id="left"><%=dgen()%></div>
