--- a/views/todoform.ejs
+++ b/views/todoform.ejs
@@ -17,6 +17,8 @@
       <% }) %>
       <% } %>
     </div>
+
+    <a href="/schedule"> Schedule </a>
   </body>
 
   <script type="text/javascript">
