Added views for login and root

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -1,6 +1,26 @@
 <html>
 <head>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <style media="screen">
+    .option{
+      margin:0 0 0 0;
+      width: 49%;
+      height: 100%;
+      display: inline-block;
+    }
+
+    #left{
+      background: #d33;
+
+    }
+
+    #right{
+      background: #3d3;
+    }
+
+
+  </style>
   <title>
     Schedule your tasks
   </title>
