added viewport meta tag and normalize to todos page

--- a/views/todoform.ejs
+++ b/views/todoform.ejs
@@ -2,6 +2,13 @@
   <head>
     <title>Add your tasks</title>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <style media="screen">
+      body{
+        background: #bdc3c7;
+      }
+    </style>
   </head>
   <body>
 
