Added fonts and changed the color of schedule page

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -3,9 +3,15 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js" charset="utf-8"></script>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <style media="screen">
+      body{
+        font-family: 'PT Sans', sans-serif;
+        font-weight: 400;
+        font-size: 2vw;
+      }
       #container{
         display: flex;
         height: 100%;
@@ -51,12 +57,12 @@
       }
 
       #right{
-        background: #1edd71;
+        background: #34495e;
         flex:1;
       }
 
       #right:active{
-        background: #2ecc71;
+        background: #2c3e50;
 
       }
 
