Renamed submit button to 'add' in todos view

--- a/views/todoform.ejs
+++ b/views/todoform.ejs
@@ -95,7 +95,7 @@
 
       <form method=post id="todoForm">
         <input type="text" name="todo" id="todoBox"/>
-        <input type="submit" id="subButton"/ >
+        <input type="submit" id="subButton" value="Add"/ >
 
       </form>
 
