Redirect to a nicer static notifcation page if there are no tasks

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -80,8 +80,9 @@
       <div class="option" id="left"></div>
       <div class="option" id="right"></div>
       <% } else { %>
-        <a href="/todos">Back</a>
-        <p> Add tasks first! </p>
+        <script>
+        window.location = "/noevents.html";
+        </script>
       <% } %>
     </div>
 
