Added a nicer notification page for task completion

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -106,7 +106,7 @@
         .done(function(){
           $.post("/updateTodos", {todos: JSON.stringify(todos)});
           if(todos.length <= 0) {
-            $('body').text("Amazing! Done!");
+            window.location = "/tasksdone.html";
 
             return;
           }
