--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -3,14 +3,13 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js" charset="utf-8"></script>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <style media="screen">
       body{
-        font-family: 'PT Sans', sans-serif;
+        font-family: 'Roboto Slab', sans-serif;
         font-weight: 400;
-        font-size: 2vw;
+        font-size: 20pt;
       }
       #container{
         display: flex;
@@ -23,6 +22,7 @@
         text-align: center;
         color: white;
         padding: 30px;
+        padding-top:8vw;
       }
       #name{
         position: absolute;
@@ -45,6 +45,7 @@
         display:flex;
         justify-content: center;
         align-items: center;
+        color: #666;
       }
 
       #left{
