--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,15 @@
 #container{
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #gbutton{
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   background: #e74c3c;
   height: 30px;
@@ -18,4 +20,19 @@
   border-radius: 3px;
   color: white;
   border-bottom: 2px solid #c0392b;
+}
+
+body{
+  font-family: 'PT Sans', sans-serif;
+}
+
+.message{
+  font-size: 20pt;
+}
+
+.message{
+  text-align: center;
+  margin: 20px auto;
+  margin-top: 4vw;
+
 }
