--- a/views/loginview.ejs
+++ b/views/loginview.ejs
@@ -1,9 +1,19 @@
 <html>
 <head>
-  <title>Login</title>
+  <title>Lazyapple</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css" charset="utf-8">
 </head>
-logged in as <%= email %>
+<body>
+  <div class="message">
+    Logged in as <%= email %>
+  </div>
+  <div id="container">
+    <a href="/logout" id="gbutton">Logout</a>
 
-<body><a href="/logout">Logout</a>
+  </div>
+
 </body>
 </html>
