Added octicons to todoform

--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -5,6 +5,7 @@
     <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js" charset="utf-8"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <link rel="stylesheet" href="o/octicons.css">
     <style media="screen">
       body{
         font-family: 'Roboto Slab', sans-serif;
