--- a/views/todoform.ejs
+++ b/views/todoform.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="o/octicons.css">
+
     <style media="screen">
       body{
         background: #e74c3c;
@@ -56,12 +58,12 @@
         justify-content: center;
         align-items: center;
         text-decoration: none;
-        background: white;
+        color: white;
         height: 30px;
         padding: 10px;
-        width: 100px;
-        border-radius: 3px;
-        color: #e74c3c;
+        width: 30px;
+        border-radius: 50px;
+        background: #e74c3c;
         border-bottom: 2px solid #c0392b;
       }
 
@@ -103,7 +105,7 @@
     </style>
   </head>
   <body>
-    <a href="/schedule" id="scheduleButton" class="obutton"> Schedule </a>
+    <a href="/schedule" id="scheduleButton" class="obutton"> <span class="mega-octicon octicon-clock"></span></a>
     <div id="container">
 
 
@@ -118,7 +120,7 @@
 
       <form method=post id="todoForm">
         <input type="text" name="todo" id="todoBox"/>
-        <input type="submit" id="subButton" value="+"/ >
+        <input type="submit" id="subButton" value="+"/ > </input>
 
       </form>
 
