--- a/views/schedulepage.ejs
+++ b/views/schedulepage.ejs
@@ -68,6 +68,30 @@
 
       }
 
+      #helpleft, #helpright{
+        font-size: 2vw;
+        position: absolute;
+        bottom: 6vw;
+        color: white;
+      }
+
+      #helpleft span, #helpright span{
+        font-size: 4vw;
+        margin: 10px;
+        padding: 5px 10px;
+        border: 2px solid white;
+      }
+
+      #helpright{
+        right:6vw;
+
+      }
+
+      #helpleft{
+        left:6vw;
+        text-align: right;
+      }
+
 
     </style>
     <title>
@@ -88,7 +112,8 @@
       <% } %>
     </div>
 
-
+  <div id="helpleft">Press <span class="mega-octicon octicon-arrow-left"> </span><br/>to Schedule to this slot</div>
+  <div id="helpright">Press <span class="mega-octicon octicon-arrow-right"> </span><br/>to Schedule to this slot</div>
 
   <!-- Load only if todos is greater than zero! -->
   <% if(todos.length > 0) { %>
